--- a/style/index.css
+++ b/style/index.css
@@ -40,3 +40,47 @@ blockquote, q {
     max-width:100%;
     border:1px solid grey;
 }
+header section{
+    display:flex;
+}
+.name{
+    font-size: 30px;
+    font-weight: bold;
+}
+.nav{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:space-between;
+}
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 3% 3%;
+}
+h1 {
+    font-size: 40px;
+    padding: 10% 25%; 
+}
+.img-sec {
+    display:flex;
+    flex-direction:row;
+    text-align:center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    
+}
+.img-sec div {
+    width:30% ;
+    padding-bottom: 5%;
+}
+.contact {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 5%;
+    font-size: 20px;
+    background-color:grey;
+
+}
