--- a/style/index.css
+++ b/style/index.css
@@ -47,17 +47,24 @@ header section{
     font-size: 30px;
     font-weight: bold;
 }
-.nav{
+.nav-bar {
     display: flex;
     flex-direction: row;
+    width: 1320px;
+    justify-content: flex-end;
+    justify-content: space;
     flex-wrap: wrap;
-    justify-content:space-between;
+    border-radius: 10%;
+    padding: 1% 0;
+
 }
+
 .projects {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding: 3% 3%;
+    
 }
 h1 {
     font-size: 40px;
